--- a/index.html
+++ b/index.html
@@ -135,25 +135,24 @@
     }
 
     .refresh-icon::after {
-	content: "Click to Refresh Single Page\nHold to Refresh All Pages";
-  	white-space: pre-line;
-  	position: absolute;
-  	bottom: 40px;
-  	right: -20px;
-  	background-color: #333;
-  	color: #fff;
-  	padding: 6px 10px;
-  	border-radius: 6px;
-  	font-size: 13px;
-  	opacity: 0;
-  	pointer-events: none;
-  	transition: opacity 0.2s ease;
-  	width: max-content;
-  	max-width: 180px;
-  	text-align: center;
-  	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-}
-
+      content: "Click to Refresh Single Page\AHold to Refresh All Pages";
+      white-space: pre-line;
+      position: absolute;
+      bottom: 40px;
+      right: -20px;
+      background-color: #333;
+      color: #fff;
+      padding: 6px 10px;
+      border-radius: 6px;
+      font-size: 13px;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease;
+      width: max-content;
+      max-width: 180px;
+      text-align: center;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    }
 
     .refresh-icon:hover::after {
       opacity: 1;
@@ -271,8 +270,6 @@
         Staff SOPs
       </span> ↗
     </button>
-  </div>
-
   </div>
 
   <div class="iframes">
