--- a/index.html
+++ b/index.html
@@ -110,16 +110,9 @@
       display: block;
     }
 
-    .refresh-icon-wrapper {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      z-index: 1000;
-    }
-
     .refresh-icon {
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
       background-color: #28a745;
       border-radius: 50%;
       display: flex;
@@ -127,6 +120,8 @@
       align-items: center;
       cursor: pointer;
       transition: transform 0.4s ease;
+      margin-top: 20px;
+      align-self: center;
       position: relative;
     }
 
@@ -138,8 +133,9 @@
       content: "Click to Refresh Single Page\AHold to Refresh All Pages";
       white-space: pre-line;
       position: absolute;
-      bottom: 40px;
-      right: -20px;
+      left: 50px;
+      top: 50%;
+      transform: translateY(-50%);
       background-color: #333;
       color: #fff;
       padding: 6px 10px;
@@ -269,6 +265,17 @@
     </button>
   </div>
 
+    <!-- Refresh Button moved here -->
+    <div class="refresh-icon">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 
+        3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 
+        8.25 0 0 1 13.803-3.7l3.181 
+        3.182m0-4.991v4.99" />
+      </svg>
+    </div>
+  </div>
+
   <div class="iframes">
     <iframe id="tool-evidence" class="tool-frame" src="https://nzdurriez.github.io/EvidenceGenerator/"></iframe>
     <iframe id="tool-ban" class="tool-frame" src="https://nzdurriez.github.io/BanAppealTemplate/"></iframe>
@@ -276,14 +283,6 @@
     <iframe id="tool-civ" class="tool-frame" src="https://nzdurriez.github.io/CIV-Acceptance/"></iframe>
     <iframe id="tool-punishment" class="tool-frame" src="https://nzdurriez.github.io/PunishmentGuidelinesStaff/"></iframe>
     <iframe id="tool-commands" class="tool-frame" src="https://nzdurriez.github.io/StaffQuickAccess/commands.html"></iframe>
-
-    <div class="refresh-icon-wrapper">
-      <div class="refresh-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
-        </svg>
-      </div>
-    </div>
   </div>
 
   <script>
