--- a/index.html
+++ b/index.html
@@ -1,167 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Staff Tool Hub</title>
-  <link rel="icon" type="image/svg+xml" href="hub-icon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #1e1e1e;
+      background: #1e1e1e;
       color: white;
-      height: 100vh;
+      font-family: Arial, sans-serif;
+      margin: 0;
       display: flex;
-      overflow: hidden;
+      height: 100vh;
     }
 
     .sidebar {
-      width: 280px;
-      background-color: #2a2a2a;
-      padding: 30px 20px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.4);
+      width: 250px;
+      background: #333;
+      padding: 20px;
       display: flex;
       flex-direction: column;
-      overflow-y: auto;
-      scrollbar-width: none;
-    }
-
-    .sidebar::-webkit-scrollbar {
-      display: none;
+      border-right: 2px solid #222;
     }
 
     .sidebar h1 {
-      color: orange;
-      margin-bottom: 25px;
-      font-size: 22px;
-    }
-
-    .sidebar h2 {
-      font-size: 16px;
-      color: #ccc;
-      margin: 25px 0 10px;
-      border-top: 1px solid #444;
-      padding-top: 10px;
+      font-size: 20px;
+      margin-bottom: 15px;
+      text-align: center;
     }
 
     .link-button {
-      background-color: #444;
-      color: white;
-      padding: 12px 15px;
-      margin: 6px 0;
-      border: none;
-      border-radius: 8px;
-      font-size: 15px;
-      cursor: pointer;
-      transition: background-color 0.2s ease;
-      width: 100%;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      background: #555;
+      color: white;
+      border: none;
+      border-radius: 12px;
+      padding: 10px;
+      margin-bottom: 10px;
+      cursor: pointer;
+      text-align: left;
+      transition: background 0.3s ease;
     }
 
     .link-button:hover {
-      background-color: #666;
-    }
-
-    .external {
-      background-color: #374151;
-    }
-
-    .external:hover {
-      background-color: #4b5563;
+      background: #666;
     }
 
     .link-label {
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 8px;
     }
 
     .link-label svg {
       width: 20px;
       height: 20px;
-      stroke: white;
     }
 
-    .iframes {
-      flex-grow: 1;
-      width: 100%;
-      height: 100vh;
-      position: relative;
+    /* Refresh button overrides */
+    .refresh-button {
+      background-color: #2e7d32; /* deep green */
     }
 
-    .tool-frame {
-      position: absolute;
-      border: none;
-      width: 100%;
-      height: 100%;
-      display: none;
-      overflow: auto;
-      scrollbar-width: none;
-    }
-
-    .tool-frame::-webkit-scrollbar {
-      display: none;
-    }
-
-    .tool-frame.active {
-      display: block;
+    .refresh-button:hover {
+      background-color: #388e3c;
     }
 
     .refresh-icon {
-      width: 40px;
-      height: 40px;
-      background-color: #28a745;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      transition: transform 0.4s ease;
-      margin-top: 20px;
-      align-self: center;
-      position: relative;
+      stroke: #a5d6a7; /* lighter green */
+      width: 20px;
+      height: 20px;
+      transition: transform 0.6s ease, stroke 0.3s ease;
     }
 
-    .refresh-icon:hover {
-      background-color: #2ecc71;
+    .refresh-button:hover .refresh-icon {
+      stroke: #ffffff; /* turns white */
+      transform: rotate(360deg); /* spin animation */
     }
-
-    .refresh-icon::after {
-      content: "Click to Refresh Single Page\AHold to Refresh All Pages";
-      white-space: pre-line;
-      position: absolute;
-      left: 50px;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: #333;
-      color: #fff;
-      padding: 6px 10px;
-      border-radius: 6px;
-      font-size: 13px;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.2s ease;
-      width: max-content;
-      max-width: 180px;
-      text-align: center;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    }
-
-    .refresh-icon:hover::after {
-      opacity: 1;
-    }
-
   </style>
 </head>
 <body>
-
   <div class="sidebar">
     <h1>Staff Tool Hub</h1>
-	
-	<!-- Internal Tools -->
+
+    <!-- Internal Tools -->
     <button class="link-button" onclick="showTool('tool-evidence')">
       <span class="link-label">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -265,77 +187,28 @@
     </button>
   </div>
 
-    <!-- Refresh Button moved here -->
-    <div class="refresh-icon">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 
-        3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 
-        8.25 0 0 1 13.803-3.7l3.181 
-        3.182m0-4.991v4.99" />
-      </svg>
-    </div>
+    <!-- New Refresh Button -->
+    <button class="link-button refresh-button" onclick="location.reload()" title="Refresh the Staff Tool Hub">
+      <span class="link-label">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" 
+             stroke="currentColor" class="refresh-icon">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                d="M4 4v6h6M20 20v-6h-6M5 19a9 9 0 0014-7h-1m0-4h1a9 9 0 00-14-7v6h6" />
+        </svg>
+        Refresh
+      </span>
+    </button>
   </div>
 
-  <div class="iframes">
-    <iframe id="tool-evidence" class="tool-frame" src="https://nzdurriez.github.io/EvidenceGenerator/"></iframe>
-    <iframe id="tool-ban" class="tool-frame" src="https://nzdurriez.github.io/BanAppealTemplate/"></iframe>
-    <iframe id="tool-3sp" class="tool-frame" src="https://nzdurriez.github.io/3SP-Template-Auto/"></iframe>
-    <iframe id="tool-civ" class="tool-frame" src="https://nzdurriez.github.io/CIV-Acceptance/"></iframe>
-    <iframe id="tool-punishment" class="tool-frame" src="https://nzdurriez.github.io/PunishmentGuidelinesStaff/"></iframe>
-    <iframe id="tool-commands" class="tool-frame" src="https://nzdurriez.github.io/StaffQuickAccess/commands.html"></iframe>
+  <div class="content" style="flex:1; padding:20px;">
+    <h2>Welcome to the Staff Tool Hub</h2>
+    <p>Content area where tools will load.</p>
   </div>
 
   <script>
-    let refreshTimeout;
-    let refreshAllTriggered = false;
-
-    function showTool(id) {
-      document.querySelectorAll('.tool-frame').forEach(el => el.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
+    function showTool(toolId) {
+      alert("Switching to: " + toolId);
     }
-
-    function refreshCurrentFrame(button) {
-      const currentFrame = document.querySelector('.tool-frame.active');
-      if (currentFrame) {
-        button.classList.add('spin');
-        currentFrame.src = currentFrame.src;
-        setTimeout(() => {
-          button.classList.remove('spin');
-        }, 400);
-      }
-    }
-
-    function refreshAllFrames(button) {
-      button.classList.add('spin');
-      document.querySelectorAll('.tool-frame').forEach(frame => {
-        frame.src = frame.src;
-      });
-      setTimeout(() => {
-        button.classList.remove('spin');
-      }, 600);
-    }
-
-    const refreshButton = document.querySelector('.refresh-icon');
-
-    refreshButton.addEventListener('mousedown', () => {
-      refreshAllTriggered = false;
-      refreshTimeout = setTimeout(() => {
-        refreshAllTriggered = true;
-        refreshAllFrames(refreshButton);
-      }, 750); // 0.75 seconds
-    });
-
-    refreshButton.addEventListener('mouseup', () => {
-      clearTimeout(refreshTimeout);
-      if (!refreshAllTriggered) {
-        refreshCurrentFrame(refreshButton);
-      }
-    });
-
-    refreshButton.addEventListener('mouseleave', () => {
-      clearTimeout(refreshTimeout);
-    });
   </script>
-
 </body>
 </html>
