--- a/index.html
+++ b/index.html
@@ -5,84 +5,77 @@
   <title>Staff Tool Hub</title>
   <style>
     body {
-      background: #1e1e1e;
-      color: white;
-      font-family: Arial, sans-serif;
       margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #1e1e1e;
+      color: white;
       display: flex;
-      height: 100vh;
     }
-
     .sidebar {
       width: 250px;
-      background: #333;
+      background-color: #333;
       padding: 20px;
+      box-sizing: border-box;
       display: flex;
       flex-direction: column;
-      border-right: 2px solid #222;
+      align-items: flex-start;
     }
-
     .sidebar h1 {
       font-size: 20px;
-      margin-bottom: 15px;
-      text-align: center;
+      margin-bottom: 20px;
     }
-
     .link-button {
       display: flex;
       align-items: center;
+      gap: 10px;
       background: #555;
       color: white;
       border: none;
-      border-radius: 12px;
       padding: 10px;
-      margin-bottom: 10px;
-      cursor: pointer;
+      width: 100%;
       text-align: left;
-      transition: background 0.3s ease;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-bottom: 10px;
     }
-
     .link-button:hover {
       background: #666;
     }
-
-    .link-label {
+    .content {
+      flex-grow: 1;
+      padding: 20px;
+      box-sizing: border-box;
+      overflow-y: auto;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    /* Refresh button style */
+    .refresh-button {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 10px;
+      background: #2e7d32; /* Green */
+      color: white;
+      border: none;
+      padding: 10px;
+      width: 100%;
+      text-align: left;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 5px;
     }
-
-    .link-label svg {
-      width: 20px;
-      height: 20px;
-    }
-
-    /* Refresh button overrides */
-    .refresh-button {
-      background-color: #2e7d32; /* deep green */
-    }
-
     .refresh-button:hover {
-      background-color: #388e3c;
-    }
-
-    .refresh-icon {
-      stroke: #a5d6a7; /* lighter green */
-      width: 20px;
-      height: 20px;
-      transition: transform 0.6s ease, stroke 0.3s ease;
-    }
-
-    .refresh-button:hover .refresh-icon {
-      stroke: #ffffff; /* turns white */
-      transform: rotate(360deg); /* spin animation */
+      background: #388e3c; /* Darker green hover */
     }
   </style>
 </head>
 <body>
   <div class="sidebar">
     <h1>Staff Tool Hub</h1>
-
+    
     <!-- Internal Tools -->
     <button class="link-button" onclick="showTool('tool-evidence')">
       <span class="link-label">
@@ -187,27 +180,37 @@
     </button>
   </div>
 
-    <!-- New Refresh Button -->
-    <button class="link-button refresh-button" onclick="location.reload()" title="Refresh the Staff Tool Hub">
+    <!-- NEW Refresh button below Commands -->
+    <button class="refresh-button" onclick="refreshContent()">
       <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" 
-             stroke="currentColor" class="refresh-icon">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
-                d="M4 4v6h6M20 20v-6h-6M5 19a9 9 0 0014-7h-1m0-4h1a9 9 0 00-14-7v6h6" />
+        <!-- Refresh SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v6h6M20 20v-6h-6M5 19A9 9 0 0119 5l1.5-1.5M18.5 18.5L20 20" />
         </svg>
         Refresh
       </span>
     </button>
+
   </div>
 
-  <div class="content" style="flex:1; padding:20px;">
-    <h2>Welcome to the Staff Tool Hub</h2>
-    <p>Content area where tools will load.</p>
+  <div class="content" id="tool-content">
+    <iframe id="tool-frame" src=""></iframe>
   </div>
 
   <script>
-    function showTool(toolId) {
-      alert("Switching to: " + toolId);
+    function showTool(tool) {
+      const frame = document.getElementById('tool-frame');
+      if (tool === 'tool-evidence') {
+        frame.src = "evidence.html";
+      } else if (tool === 'tool-commands') {
+        frame.src = "commands.html";
+      }
+    }
+    function refreshContent() {
+      const frame = document.getElementById('tool-frame');
+      if (frame.src) {
+        frame.src = frame.src; // reload iframe
+      }
     }
   </script>
 </body>
