--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <body>
 
   <div class="sidebar">
-    <h1>Staff Tool Hub</h1>
+    <center></center><h1>Staff Tool Hub</h1></center>
 	
 	<!-- Internal Tools -->
     <button class="link-button" onclick="showTool('tool-evidence')">
