--- a/commands.html
+++ b/commands.html
@@ -82,6 +82,7 @@
       <li><code>/staffremove [ID]</code> - Force remove prio from player</li>
       <li><code>/blprio [ID]</code> - Toggle prio blacklist for player</li>
       <li><code>/blpriolist</code> - View prio blacklisted players</li>
+      <li><code>/dvall</code> - Starts a 60 second timer to delete all unattended vehicles</li>
     </ul>
   </details>
 
@@ -108,3 +109,4 @@
 
 </body>
 </html>
+
