--- a/commands.html
+++ b/commands.html
@@ -59,7 +59,7 @@
 <body>
   <h1>Ingame & Discord Staff Commands</h1>
 
-  <details open>
+  <details>
     <summary>🎮 Ingame Staff Commands</summary>
     <ul>
       <li><code>/resetpcd</code> - Reset the priority status to inactive</li>
@@ -109,4 +109,5 @@
 
 </body>
 </html>
+
 
