--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 7v3m0 0v3m0-3h3m-3 0h-3M9 10a3 3 0 100-6 3 3 0 000 6zM3 20v-.11a6.375 6.375 0 0112.75 0V20a12.318 12.318 0 01-6.375 1.5A12.318 12.318 0 013 20z" />
         </svg>
-        Civ+ Accept/Deny
+        CIV+ Accept/Deny
       </span>
     </button>
 
