--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
       </span> ↗
     </button>
 
-    <button class="link-button external" onclick="window.open('https://staff.bhrp.nz/index.php?page=policies', '_blank')">
-      <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h6m-6 4h10M4 6h16a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V7a1 1 0 011-1z" />
-        </svg>
-        Staff SOPs
-      </span> ↗
-    </button>
+    <button class="link-button external" onclick="window.open('sop-redirect.html', '_blank')">
+  <span class="link-label">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h6m-6 4h10M4 6h16a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V7a1 1 0 011-1z" />
+    </svg>
+    Staff SOPs
+  	</span> ↗
+	</button>
   </div>
 
   <div class="iframes">
