--- a/sop-redirect.html
+++ b/sop-redirect.html
@@ -11,7 +11,7 @@
     // auto-correct it after 3 seconds
     setTimeout(() => {
       if (window.location.hostname === "staff.bhrp.nz" &&
-          window.location.search.includes("page=home")) {
+          window.location.search.includes("page=index")) {
         window.location.href = "https://staff.bhrp.nz/index.php?page=policies";
       }
     }, 3000);
@@ -21,3 +21,4 @@
   Redirecting to Staff SOP… please wait.
 </body>
 </html>
+
