--- a/sop-redirect.html
+++ b/sop-redirect.html
@@ -7,11 +7,12 @@
     // Immediately try to send them to the SOP page
     window.location.href = "https://staff.bhrp.nz/index.php?page=policies";
 
-    // If the login system kicks them back to ?page=home,
+    // If the login system wipes the query and leaves you on plain index.php,
     // auto-correct it after 3 seconds
     setTimeout(() => {
       if (window.location.hostname === "staff.bhrp.nz" &&
-          window.location.search.includes("page=index")) {
+          window.location.pathname === "/index.php" &&
+          window.location.search === "") {
         window.location.href = "https://staff.bhrp.nz/index.php?page=policies";
       }
     }, 3000);
@@ -21,4 +22,3 @@
   Redirecting to Staff SOP… please wait.
 </body>
 </html>
-
